[package]
name = "node_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]